--- a/Formula 1w/Ferrari.html
+++ b/Formula 1w/Ferrari.html
@@ -8,7 +8,10 @@
     <title>FERRARI</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Ferrari F1-2000</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,27 +29,25 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Ferrari F1-2000 a Scuderia Ferrari által fejlesztett Formula–1-es versenyautó, amelyet a 2000-es világbajnoki szezonra építettek. A modell tervezéséért Ross Brawn (technikai igazgató) és Rory Byrne (vezető tervező) felelt, míg az aerodinamikai fejlesztéseket Willem Toet vezette. Az autó a Ferrari hosszú távú technikai fejlődésének eredménye, és kulcsszerepet játszott abban, hogy a csapat újra domináns szereplővé váljon.
+  <section class="info-section"><p>A Ferrari F1-2000 a Scuderia Ferrari által fejlesztett Formula–1-es versenyautó, amelyet a 2000-es világbajnoki szezonra építettek. A modell tervezéséért Ross Brawn (technikai igazgató) és Rory Byrne (vezető tervező) felelt, míg az aerodinamikai fejlesztéseket Willem Toet vezette. Az autó a Ferrari hosszú távú technikai fejlődésének eredménye, és kulcsszerepet játszott abban, hogy a csapat újra domináns szereplővé váljon.</p>
 
 Műszaki adatok
-- Motor: Ferrari Tipo 049 – 3.0 literes V10, 90° hengerszög, szívó
-- Teljesítmény: kb. 805 lóerő @ 17 300 rpm
-- Sebességváltó: 7 sebességes szekvenciális, titán házban
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Szénszálas monocoque, integrált bukóstruktúrával
-- Tömeg: 600 kg (FIA minimum)
-- Üzemanyag: Shell
-- Gumik: Bridgestone
+<ul>
+  <li> Motor: Ferrari Tipo 049 – 3.0 literes V10, 90° hengerszög, szívó</li>
+  <li> Teljesítmény: kb. 805 lóerő @ 17 300 rpm</li>
+  <li> Sebességváltó: 7 sebességes szekvenciális, titán házban</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Karosszéria: Szénszálas monocoque, integrált bukóstruktúrával</li>
+  <li> Tömeg: 600 kg (FIA minimum)</li>
+  <li>Üzemanyag: Shell</li>
+  <li> Gumik: Bridgestone</li>
+</ul>
 
-Pilóták
+<p>Pilóták</p>
 - Michael Schumacher – 9 futamgyőzelem, világbajnok
 - Rubens Barrichello – 1 futamgyőzelem, stabil pontszerző
 
-Eredmények a 2000-es szezonban
+<p>Eredmények a 2000-es szezonban</p>
 - Győzelmek: 10 (Schumacher: 9, Barrichello: 1)
 - Pole pozíciók: 9
 - Dobogós helyezések: 21
@@ -54,6 +55,14 @@ Eredmények a 2000-es szezonban
 - Egyéni: Michael Schumacher
 - Konstruktőri: Ferrari
 
-Összegzés
+<p>Összegzés</p>
 A Ferrari F1-2000 a Scuderia Ferrari modern korszakának nyitánya volt. A modell nemcsak technikailag volt kiemelkedő, hanem pszichológiai áttörést is jelentett a csapat számára, amely 1979 óta nem nyert egyéni világbajnoki címet. Schumacher dominanciája és a csapat egysége révén a Ferrari újra a Forma–1 csúcsára került, és ezzel elindult az öt egymást követő világbajnoki cím időszaka.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
