--- a/Formula 1w/Lotus.html
+++ b/Formula 1w/Lotus.html
@@ -8,7 +8,10 @@
     <title>LOTUS</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Lotus Renault GP R31</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,22 +29,22 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
+  <section class="info-section"><p>A 2011-es Forma–1-es szezon különleges volt a Lotus név szempontjából, mivel két különálló csapat is használta: a brit-francia Lotus Renault GP és a malajziai Team Lotus. Bár mindkét istálló a legendás márkanévhez kötődött, technikailag és jogilag teljesen különálló konstrukciókkal és háttérrel működtek.</p>
 
+<p>
+  Lotus Renault GP – Renault R31
+  A Lotus Renault GP a korábbi Renault gyári csapat jogutódja volt, amely a Lotus Cars támogatásával versenyzett. A csapat a Renault R31-es autóval indult, amely radikális kipufogó-elrendezésével kezdetben ígéretesnek tűnt.
+</p>
+<ul>
+  <li> Motor: Renault RS27 V8</li>
+  <li> Sebességváltó: Renault – 7 sebességes szekvenciális</li>
+  <li> Karosszéria: Szénszálas monocoque, zárt cockpit</li>
+  <li> Gumik: Pirelli</li>
+  <li>Pilóták: Nick Heidfeld, Vitaly Petrov, Bruno Senna</li>
+  <li> Csapatfőnök: Eric Boullier</li>
+</ul>
 
-<!-- A 2011-es Forma–1-es szezon különleges volt a Lotus név szempontjából, mivel két különálló csapat is használta: a brit-francia Lotus Renault GP és a malajziai Team Lotus. Bár mindkét istálló a legendás márkanévhez kötődött, technikailag és jogilag teljesen különálló konstrukciókkal és háttérrel működtek.
-
-Lotus Renault GP – Renault R31
-A Lotus Renault GP a korábbi Renault gyári csapat jogutódja volt, amely a Lotus Cars támogatásával versenyzett. A csapat a Renault R31-es autóval indult, amely radikális kipufogó-elrendezésével kezdetben ígéretesnek tűnt.
-- Motor: Renault RS27 V8
-- Sebességváltó: Renault – 7 sebességes szekvenciális
-- Karosszéria: Szénszálas monocoque, zárt cockpit
-- Gumik: Pirelli
-- Pilóták: Nick Heidfeld, Vitaly Petrov, Bruno Senna
-- Csapatfőnök: Eric Boullier
-
-Team Lotus – Lotus T128
+<p>Team Lotus – Lotus T128</p>
 A Team Lotus a malajziai Tony Fernandes vezetésével működött, és a szezon során technikai fejlődést mutatott a 2010-es évhez képest. Az autó a Lotus T128 volt, amely Renault motorral és Red Bull Technologies váltóval készült.
 - Motor: Renault RS27 V8
 - Sebességváltó: Red Bull Technologies – 7 sebességes szekvenciális
@@ -50,17 +53,23 @@ A Team Lotus a malajziai Tony Fernandes vezetésével működött, és a szezon 
 - Pilóták: Heikki Kovalainen, Jarno Trulli, Karun Chandhok
 - Technikai igazgató: Mike Gascoyne
 
-Eredmények a 2011-es szezonban
+<p>Eredmények a 2011-es szezonban</p>
 Lotus Renault GP
 - Pontok: 73
 - Legjobb helyezés: 3. hely (Petrov – Ausztrália)
 - Konstruktőri helyezés: 5.
 
-Team Lotus
+<p>Team Lotus</p>
 - Pontok: 0
 - Legjobb helyezés: 13. hely
 - Konstruktőri helyezés: 10.
 
-Összegzés
+<p>Összegzés</p>
 A Lotus név 2011-ben két különböző csapatot takart, eltérő technikai háttérrel és teljesítménnyel. A Lotus Renault GP dobogós helyezésekkel indított, de a szezon közepére visszaesett, míg a Team Lotus pontot ugyan nem szerzett, de stabil technikai fejlődést mutatott. A névhasználat körüli jogi vita 2012-ben oldódott meg: a Team Lotus Caterham néven folytatta, míg a Lotus Renault GP Lotus F1 Teamként versenyzett tovább.
- -->
+</section>
+
+
+</body>
+</html>
+
+
