--- a/Formula 1w/McLaren.html
+++ b/Formula 1w/McLaren.html
@@ -8,7 +8,10 @@
     <title>McLAREN</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">McLaren MP4</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,27 +29,25 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A McLaren MP4/4 a brit McLaren Formula–1-es csapat 1988-as szezonra fejlesztett versenyautója, amely a sportág történetének egyik legsikeresebb konstrukciója lett. Az autó a Honda V6 turbómotorjával és a korszak két legnagyobb versenyzőjével – Ayrton Sennával és Alain Prosttal – dominálta a szezont, és új mércét állított a technikai hatékonyság és csapatszintű teljesítmény terén.
+  <section class="info-section"><p>A McLaren MP4/4 a brit McLaren Formula–1-es csapat 1988-as szezonra fejlesztett versenyautója, amely a sportág történetének egyik legsikeresebb konstrukciója lett. Az autó a Honda V6 turbómotorjával és a korszak két legnagyobb versenyzőjével – Ayrton Sennával és Alain Prosttal – dominálta a szezont, és új mércét állított a technikai hatékonyság és csapatszintű teljesítmény terén.</p>
 
 Műszaki adatok
-- Kategória: Formula–1 (1988)
-- Alváz: Szénszálas monocoque
-- Motor: Honda RA168E – 1.5 literes V6 turbó, kb. 685 lóerő @ 12 500 rpm
-- Sebességváltó: 6 sebességes szekvenciális kézi váltó
-- Hajtás: Hátsókerék-meghajtás
-- Tömeg: kb. 540 kg (FIA minimum)
-- Gumik: Goodyear
-- Üzemanyag: Shell
+<ul>
+  <li> Kategória: Formula–1 (1988)</li>
+  <li> Alváz: Szénszálas monocoque</li>
+  <li> Motor: Honda RA168E – 1.5 literes V6 turbó, kb. 685 lóerő @ 12 500 rpm</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális kézi váltó</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Tömeg: kb. 540 kg (FIA minimum)</li>
+  <li> Gumik: Goodyear</li>
+  <li> Üzemanyag: Shell</li>
+</ul>
 
-Pilóták
+<p>Pilóták</p>
 - Ayrton Senna – 8 győzelem, világbajnok
 - Alain Prost – 7 győzelem, világbajnoki 2. helyezett
 
-Eredmények a 1988-as szezonban
+<p>Eredmények a 1988-as szezonban</p>
 - Futamgyőzelmek: 15 győzelem 16 versenyből
 - Pole pozíciók: 15
 - Leggyorsabb körök: 10
@@ -54,6 +55,14 @@ Eredmények a 1988-as szezonban
 - Egyéni: Ayrton Senna
 - Konstruktőri: McLaren-Honda
 
-Összegzés
+<p>Összegzés</p>
 A McLaren MP4/4 minden idők egyik legdominánsabb Forma–1-es autója volt. A 93,75%-os győzelmi arányával máig rekordot tart a sportág történetében. Az autó nemcsak technikai szempontból volt kiemelkedő, hanem a Senna–Prost rivalizálás révén a Forma–1 egyik legemlékezetesebb korszakának szimbólumává is vált. Az MP4/4 öröksége a mai napig él a motorsport világában.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
