--- a/Formula 1w/Mercedes.html
+++ b/Formula 1w/Mercedes.html
@@ -8,7 +8,10 @@
     <title>MERCEDES</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Mercedes-AMG F1 W11 EQ Performance</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,31 +29,29 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Mercedes-AMG F1 W11 EQ Performance a Mercedes gyári Forma–1-es csapat 2020-as szezonra fejlesztett versenyautója. A modell a W10 utódjaként készült, és a hibrid éra egyik legdominánsabb konstrukciója lett. A W11 segítségével Lewis Hamilton megszerezte hetedik világbajnoki címét, míg a Mercedes zsinórban hetedik konstruktőri bajnoki címét ünnepelhette.
+  <section class="info-section"> <p>A Mercedes-AMG F1 W11 EQ Performance a Mercedes gyári Forma–1-es csapat 2020-as szezonra fejlesztett versenyautója. A modell a W10 utódjaként készült, és a hibrid éra egyik legdominánsabb konstrukciója lett. A W11 segítségével Lewis Hamilton megszerezte hetedik világbajnoki címét, míg a Mercedes zsinórban hetedik konstruktőri bajnoki címét ünnepelhette.</p>
 
 Műszaki adatok
-- Kategória: Formula–1 (2020)
-- Alváz: Szénszálas kompozit monocoque, beépített bukóstruktúrával
-- Motor: Mercedes-AMG F1 M11 EQ Performance – 1.6 literes V6 turbó-hibrid
-- ERS rendszer: MGU-K és MGU-H egységek, lítium-ion akkumulátorral
-- Teljesítmény: kb. 1000+ lóerő (belső égésű + elektromos)
-- Sebességváltó: 8 sebességes szekvenciális, karbonházas
-- Hajtás: Hátsókerék-meghajtás
-- Tömeg: 746 kg (versenyzővel és üzemanyaggal)
-- Gumik: Pirelli
+<ul>
+  <li> Kategória: Formula–1 (2020)</li>
+  <li> Alváz: Szénszálas kompozit monocoque, beépített bukóstruktúrával</li>
+  <li> Motor: Mercedes-AMG F1 M11 EQ Performance – 1.6 literes V6 turbó-hibrid</li>
+  <li> ERS rendszer: MGU-K és MGU-H egységek, lítium-ion akkumulátorral</li>
+  <li> Teljesítmény: kb. 1000+ lóerő (belső égésű + elektromos)</li>
+  <li> Sebességváltó: 8 sebességes szekvenciális, karbonházas</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Tömeg: 746 kg (versenyzővel és üzemanyaggal)</li>
+  <li> Gumik: Pirelli</li>
+</ul>
 
-Kiemelkedő technikai újítás
+<p>Kiemelkedő technikai újítás</p>
 - DAS rendszer (Dual Axis Steering): A Mercedes egyedülálló kormányrendszert fejlesztett, amely lehetővé tette az első kerekek dőlésszögének menet közbeni állítását. A rendszer segítette a gumik felmelegítését és a kopás optimalizálását, de a 2021-es szabályok betiltották.
 
-Pilóták
+<p>Pilóták</p>
 - Lewis Hamilton – 11 győzelem, világbajnok
 - Valtteri Bottas – 2 győzelem, világbajnoki 2. helyezett
 
-Eredmények a 2020-as szezonban
+<p>Eredmények a 2020-as szezonban</p>
 - Futamgyőzelmek: 13 a 17 versenyből
 - Pole pozíciók: 15
 - Leggyorsabb körök: 9
@@ -58,6 +59,12 @@ Eredmények a 2020-as szezonban
 - Egyéni: Lewis Hamilton (7. világbajnoki cím)
 - Konstruktőri: Mercedes-AMG Petronas Formula One Team (7. egymást követő év)
 
-Összegzés
+<p>Összegzés</p>
 A Mercedes W11 a hibrid éra egyik legfejlettebb és legsikeresebb Forma–1-es autója volt. A DAS rendszer, a kiváló aerodinamika és a megbízható hajtáslánc révén a csapat dominálta a 2020-as szezont. A W11 nemcsak technikai bravúr, hanem történelmi mérföldkő is volt, amely Lewis Hamilton hetedik világbajnoki címét hozta el, beállítva Michael Schumacher rekordját.
- -->
+</section>
+
+
+</body>
+</html>
+
+
