--- a/Formula 1w/RedBull.html
+++ b/Formula 1w/RedBull.html
@@ -8,7 +8,10 @@
     <title>REDBULL</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">RedBull RB7</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,28 +29,26 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Red Bull RB7 a Red Bull Racing által fejlesztett Formula–1-es versenyautó, amelyet a 2011-es világbajnoki szezonban használtak. A modell az Adrian Newey által tervezett RB6 utódja, és a csapat dominanciáját tovább erősítette. Az RB7 a szezon leggyorsabb és legjobban kiegyensúlyozott autója volt, különösen az aerodinamikai hatékonyság és a kipufogógáz-alapú diffúzor terén.
+  <section class="info-section"><p>A Red Bull RB7 a Red Bull Racing által fejlesztett Formula–1-es versenyautó, amelyet a 2011-es világbajnoki szezonban használtak. A modell az Adrian Newey által tervezett RB6 utódja, és a csapat dominanciáját tovább erősítette. Az RB7 a szezon leggyorsabb és legjobban kiegyensúlyozott autója volt, különösen az aerodinamikai hatékonyság és a kipufogógáz-alapú diffúzor terén.</p>
 
 Műszaki adatok
-- Kategória: Formula–1 (2011)
-- Alváz: Szénszálas kompozit monocoque
-- Motor: Renault RS27 – 2.4 literes V8 szívó
-- Teljesítmény: kb. 750 lóerő @ 18 000 rpm
-- Sebességváltó: 7 sebességes szekvenciális, karbonházas
-- Hajtás: Hátsókerék-meghajtás
-- Tömeg: 640 kg (FIA minimum)
-- Gumik: Pirelli
-- Kiemelt technológia: Kipufogógáz-alapú diffúzor (blown diffuser), KERS rendszer
+<ul>
+  <li> Kategória: Formula–1 (2011)</li>
+  <li> Alváz: Szénszálas kompozit monocoque</li>
+  <li> Motor: Renault RS27 – 2.4 literes V8 szívó</li>
+  <li> Teljesítmény: kb. 750 lóerő @ 18 000 rpm</li>
+  <li> Sebességváltó: 7 sebességes szekvenciális, karbonházas</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Tömeg: 640 kg (FIA minimum)</li>
+  <li>Gumik: Pirelli</li>
+  <li>Kiemelt technológia: Kipufogógáz-alapú diffúzor (blown diffuser), KERS rendszer</li>
+</ul>
 
-Pilóták
+<p>Pilóták</p>
 - Sebastian Vettel – 11 győzelem, világbajnok
 - Mark Webber – 3. hely az egyéni bajnokságban
 
-Eredmények a 2011-es szezonban
+<p>Eredmények a 2011-es szezonban</p>
 - Futamgyőzelmek: 12 a 19 versenyből
 - Pole pozíciók: 18 (Vettel: 15)
 - Dobogós helyezések: 27
@@ -55,6 +56,13 @@ Eredmények a 2011-es szezonban
 - Egyéni: Sebastian Vettel (2. világbajnoki cím)
 - Konstruktőri: Red Bull Racing-Renault (2. egymást követő év)
 
-Összegzés
+<p>Összegzés</p>
 A Red Bull RB7 a 2011-es szezon abszolút domináns autója volt, amely technikai szempontból is mérföldkőnek számított. Az Adrian Newey által tervezett aerodinamikai csomag, a kipufogógáz-alapú diffúzor és a kiváló mechanikai tapadás révén az RB7 minden pályán versenyképes volt. Sebastian Vettel magabiztosan szerezte meg második világbajnoki címét, míg a Red Bull Racing megerősítette helyét a sportág élvonalában.
- -->
+</section>
+
+
+</body>
+</html>
+
+
+ 
