--- a/Formula 1w/Renault.html
+++ b/Formula 1w/Renault.html
@@ -8,7 +8,10 @@
     <title>RENAULT</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Renault R24</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,36 +29,39 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Renault R24 a Renault F1 Team 2004-es szezonra fejlesztett Formula–1-es versenyautója volt. A konstrukció a 2003-as R23B továbbfejlesztett változata, amelyet a csapat technikai stábja – Robert Bell (technikai igazgató), Mark Smith (vezető tervező) és Dino Toso (aerodinamikai vezető) – készített. A Renault célja az volt, hogy stabil dobogós szereplővé váljon, és előkészítse a terepet a 2005-ös világbajnoki címhez.
+  <section class="info-section"><p>A Renault R24 a Renault F1 Team 2004-es szezonra fejlesztett Formula–1-es versenyautója volt. A konstrukció a 2003-as R23B továbbfejlesztett változata, amelyet a csapat technikai stábja – Robert Bell (technikai igazgató), Mark Smith (vezető tervező) és Dino Toso (aerodinamikai vezető) – készített. A Renault célja az volt, hogy stabil dobogós szereplővé váljon, és előkészítse a terepet a 2005-ös világbajnoki címhez.</p>
 
 Műszaki adatok
-- Alváz: Szénszálas kompozit monocoque
-- Motor: Renault RS24 – 3.0 literes V10, 72° hengerszög
-- Teljesítmény: kb. 900 lóerő @ 19 000 rpm
-- Sebességváltó: 6 sebességes szekvenciális, titán házban
-- Hajtás: Hátsókerék-meghajtás
-- Tömeg: 605 kg (FIA minimum)
-- Gumik: Michelin
-- Üzemanyag: Elf
-Az új motor elrendezés lehetővé tette a keskenyebb oldalsó légbeömlőket és a hátsó aerodinamikai csomag optimalizálását. A csapat jelentős szélcsatorna-fejlesztéseket hajtott végre, hogy kompenzálja a 2004-es szabályváltozások miatti leszorítóerő-veszteséget.
+<ul>
+  <li> Alváz: Szénszálas kompozit monocoque</li>
+  <li> Motor: Renault RS24 – 3.0 literes V10, 72° hengerszög</li>
+  <li> Teljesítmény: kb. 900 lóerő @ 19 000 rpm</li>
+  <li>Sebességváltó: 6 sebességes szekvenciális, titán házban</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Tömeg: 605 kg (FIA minimum)</li>
+  <li> Gumik: Michelin</li>
+  <li> Üzemanyag: Elf</li>
+</ul>
+<p>Az új motor elrendezés lehetővé tette a keskenyebb oldalsó légbeömlőket és a hátsó aerodinamikai csomag optimalizálását. A csapat jelentős szélcsatorna-fejlesztéseket hajtott végre, hogy kompenzálja a 2004-es szabályváltozások miatti leszorítóerő-veszteséget.</p>
 
-Pilóták
+<p>Pilóták</p>
 - Fernando Alonso – 4. hely az egyéni bajnokságban
 - Jarno Trulli – 6. hely, győzelem Monacóban
 - Jacques Villeneuve – szezon végi beugró (3 futam)
 
-Eredmények a 2004-es szezonban
+<p>Eredmények a 2004-es szezonban</p>
 - Futamgyőzelem: 1 (Monaco – Jarno Trulli)
 - Dobogós helyezések: 8
 - Pole pozíció: 1 (Monaco)
 - Konstruktőri helyezés: 3. hely (105 pont)
 
-Összegzés
+<p>Összegzés</p>
 A Renault R24 stabil és versenyképes konstrukció volt, amely megalapozta a csapat 2005-ös világbajnoki sikerét. Jarno Trulli monacói győzelme a Renault első futamgyőzelme volt a modern érában, míg Fernando Alonso folyamatos pontszerzése révén a csapat a Ferrari és BAR mögött a 3. helyen zárt. A R24 technikai fejlesztései és megbízhatósága kulcsszerepet játszottak a Renault hosszú távú Forma–1-es stratégiájában.
+</section>
 
 
- -->
+</body>
+</html>
+
+
+ 
