--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -7,7 +7,10 @@
   <title>ALPINE</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Alpine A424</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,22 +28,20 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- Az Alpine Elf Endurance Team 2025-ben második szezonját kezdi a FIA World Endurance Championship (WEC) Hypercar kategóriájában. A csapat két Alpine A424 prototípust indít (#35 és #36 rajtszám alatt), amelyek a márka motorsport-hagyományait ötvözik modern technológiával és francia mérnöki precizitással.
+  <section class="info-section"><p>Az Alpine Elf Endurance Team 2025-ben második szezonját kezdi a FIA World Endurance Championship (WEC) Hypercar kategóriájában. A csapat két Alpine A424 prototípust indít (#35 és #36 rajtszám alatt), amelyek a márka motorsport-hagyományait ötvözik modern technológiával és francia mérnöki precizitással.</p>
 
 Műszaki alapok
-- Kategória: Hypercar (LMDh szabályrendszer)
-- Motor: 3.4 literes V6 turbó (Gibson Technology)
-- Hibrid rendszer: Bosch elektromos egység + Williams Advanced Engineering akkumulátor
-- Sebességváltó: Xtrac szekvenciális
-- Alváz: Oreca LMP2 alapú karbonszálas monocoque
-- Teljesítmény: kb. 670 lóerő (szabályozott)
-- Hajtás: Hátsókerék-meghajtás, hibrid rásegítéssel
+<ul>
+  <li> Kategória: Hypercar (LMDh szabályrendszer)</li>
+  <li> Motor: 3.4 literes V6 turbó (Gibson Technology)</li>
+  <li> Hibrid rendszer: Bosch elektromos egység + Williams Advanced Engineering akkumulátor</li>
+  <li> Sebességváltó: Xtrac szekvenciális</li>
+  <li> Alváz: Oreca LMP2 alapú karbonszálas monocoque</li>
+  <li> Teljesítmény: kb. 670 lóerő (szabályozott)</li>
+  <li> Hajtás: Hátsókerék-meghajtás, hibrid rásegítéssel</li>
+</ul>
 
-Pilótafelállás 2025-ben
+<p>Pilótafelállás 2025-ben</p>
 #35 Alpine A424
 - Paul-Loup Chatin
 - Charles Milesi
@@ -51,12 +52,19 @@ Pilótafelállás 2025-ben
 - Frédéric Makowiecki
 Tartalék pilóta: Matthieu Vaxiviere
 
-Eredmények a 2024-es szezonban
+<p>Eredmények a 2024-es szezonban</p>
 - Fuji: 3. helyezés
 - Austin (Texas): 4. hely
 - Japán: 4. hely
 - Bahrein: 4. hely
 
-Összegzés
+<p>Összegzés</p>
 Az Alpine A424 és a hozzá tartozó versenyprogram a francia gyártó komoly elköteleződését jelzi a hosszútávú versenyzés iránt. A csapat technikai fejlődése és pilótafelállása azt mutatja, hogy az Alpine célja nem csupán a részvétel, hanem a győzelem a Hypercar kategóriában. A 2024-es eredmények biztatóak, és a 2025-ös szezonban az Alpine stabil dobogós szereplővé válhat.
- -->
+</section>
+
+
+</body>
+</html>
+
+
+ 
