--- a/WECw/Aston.html
+++ b/WECw/Aston.html
@@ -7,7 +7,10 @@
     <title>ASTON MARTIN</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Aston Martin Valkyrie AMR-LMH</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,23 +28,21 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- Az Aston Martin 2025-ben hivatalosan is belép a FIA World Endurance Championship (WEC) Hypercar kategóriájába, a Valkyrie AMR-LMH versenyautóval. A projektet a Heart of Racing csapattal közösen valósítják meg, és az Aston Martin célja, hogy a Formula–1 mellett a hosszútávú versenyzés csúcskategóriájában is meghatározó szereplővé váljon.
+  <section class="info-section"><p>Az Aston Martin 2025-ben hivatalosan is belép a FIA World Endurance Championship (WEC) Hypercar kategóriájába, a Valkyrie AMR-LMH versenyautóval. A projektet a Heart of Racing csapattal közösen valósítják meg, és az Aston Martin célja, hogy a Formula–1 mellett a hosszútávú versenyzés csúcskategóriájában is meghatározó szereplővé váljon.</p>
 
 Műszaki alapok
-- Kategória: Hypercar (LMH szabályrendszer)
-- Motor: 6.5 literes V12 szívómotor (Cosworth fejlesztés)
-- Teljesítmény: kb. 1000 lóerő (verseny-specifikációban korlátozva)
-- Hibrid rendszer: nincs (LMH szabályok szerint opcionális)
-- Sebességváltó: Xtrac szekvenciális
-- Alváz: Karbonszálas monocoque, teljesen Aston Martin fejlesztés
-- Hajtás: Hátsókerék-meghajtás
-- Aerodinamika: Aktív elemek nélkül, de extrém leszorítóerővel
+<ul>
+  <li> Kategória: Hypercar (LMH szabályrendszer)</li>
+  <li> Motor: 6.5 literes V12 szívómotor (Cosworth fejlesztés)</li>
+  <li> Teljesítmény: kb. 1000 lóerő (verseny-specifikációban korlátozva)</li>
+  <li>Hibrid rendszer: nincs (LMH szabályok szerint opcionális)</li>
+  <li> Sebességváltó: Xtrac szekvenciális</li>
+  <li> Alváz: Karbonszálas monocoque, teljesen Aston Martin fejlesztés</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Aerodinamika: Aktív elemek nélkül, de extrém leszorítóerővel</li>
+</ul>
 
-Pilótafelállás 2025-ben
+<p>Pilótafelállás 2025-ben</p>
 #007 Aston Martin Valkyrie
 - Harry Tincknell
 - Tom Gamble
@@ -50,11 +51,19 @@ Pilótafelállás 2025-ben
 - Alex Riberas
 Tartalék és IMSA-pilóták: Ross Gunn, Roman De Angelis
 
-Eredmények a 2025-ös szezonban (eddig)
+<p>Eredmények a 2025-ös szezonban (eddig)</p>
 - Spa-Francorchamps: első közös versenyhétvége, mindkét autó célba ért
 - Le Mans 24h: felkészülés folyamatban, a csapat célja a top 5-be kerülés
 - IMSA Laguna Seca: #23 Valkyrie 100%-os pontszerző sorozatot tart fenn
 
-Összegzés
+<p>Összegzés</p>
 Az Aston Martin Valkyrie AMR-LMH a brit gyártó visszatérését jelenti a hosszútávú versenyzés csúcsára, immár a Hypercar kategóriában. A projekt technikai szempontból egyedi, hiszen a Valkyrie utcai szuperautó alapjaira épül, de teljesen verseny-specifikus fejlesztést kapott. A csapat célja, hogy 2025-ben stabil szereplővé váljon, és a következő években győzelmekért harcoljon a Ferrari, Toyota és Porsche ellen.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
