--- a/WECw/Audi.html
+++ b/WECw/Audi.html
@@ -7,7 +7,10 @@
     <title>AUDI</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Audi R18 e-tron quattro TDI</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,35 +28,40 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- Az Audi R18 e-tron quattro TDI az Audi Sport Team Joest által fejlesztett LMP1 kategóriás versenyautó, amely a hosszútávú versenyzés történetének egyik technikai mérföldköve. A modell a dízelmotoros hagyományokat ötvözte hibrid technológiával, és az Audi dominanciáját erősítette a 2010-es évek elején.
+  <section class="info-section"> <p>Az Audi R18 e-tron quattro TDI az Audi Sport Team Joest által fejlesztett LMP1 kategóriás versenyautó, amely a hosszútávú versenyzés történetének egyik technikai mérföldköve. A modell a dízelmotoros hagyományokat ötvözte hibrid technológiával, és az Audi dominanciáját erősítette a 2010-es évek elején.</p>
 
 Technikai adatok
-- Kategória: LMP1-H (Le Mans Prototype – Hybrid)
-- Motor: 3.7 literes V6 TDI turbódízel
-- Hibrid rendszer: KERS (kinetikus energia-visszanyerés) – első tengelyen elhelyezett elektromotorokkal
-- Teljesítmény: kb. 510 lóerő (belső égésű) + 200 lóerő (elektromos rásegítés)
-- Hajtás: e-tron quattro – hátsókerék-meghajtás dízelmotorral, elsőkerék-meghajtás elektromosan (ideiglenesen, szabályozottan)
-- Sebességváltó: 6 sebességes szekvenciális
-- Karosszéria: Szénszálas monocoque, zárt cockpit
-- Tömeg: kb. 870–915 kg (szabálytól és évjárattól függően)
-- Üzemanyag: Shell dízel (speciális versenykeverék)
+<ul>
+  <li>Kategória: LMP1-H (Le Mans Prototype – Hybrid)</li>
+  <li>Motor: 3.7 literes V6 TDI turbódízel</li>
+  <li> Hibrid rendszer: KERS (kinetikus energia-visszanyerés) – első tengelyen elhelyezett elektromotorokkal</li>
+  <li> Teljesítmény: kb. 510 lóerő (belső égésű) + 200 lóerő (elektromos rásegítés)</li>
+  <li> Hajtás: e-tron quattro – hátsókerék-meghajtás dízelmotorral, elsőkerék-meghajtás elektromosan (ideiglenesen, szabályozottan)</li>
+  <li>Sebességváltó: 6 sebességes szekvenciális</li>
+  <li> Karosszéria: Szénszálas monocoque, zárt cockpit</li>
+  <li> Tömeg: kb. 870–915 kg (szabálytól és évjárattól függően)</li>
+  <li> Üzemanyag: Shell dízel (speciális versenykeverék)</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - Debütálás: 2012 Le Mans 24h
 - Le Mans győzelmek: 2012, 2013
 - WEC világbajnoki cím: 2013 (konstruktőri és egyéni)
 - Fő versenyzők: André Lotterer, Benoît Tréluyer, Marcel Fässler, Tom Kristensen, Allan McNish, Lucas di Grassi
 
-Eredmények
+<p>Eredmények</p>
 - 2012 Le Mans: 1. és 2. hely (első hibrid győzelem)
 - 2013 Le Mans: 1. hely
 - 2013 WEC: világbajnoki cím
 - 2014–2016: dobogós helyezések, de a Porsche 919 Hybrid dominanciája miatt visszaesés
 
-Összegzés
+<p>Összegzés</p>
 Az Audi R18 e-tron quattro TDI a hosszútávú versenyzés egyik technikai csúcspontja volt, amely a dízelmotoros és hibrid hajtásláncok kombinációjával új korszakot nyitott. Az autó nemcsak győzelmeket hozott az Audinak, hanem hozzájárult a hibrid technológia elfogadásához és fejlődéséhez a motorsportban. A modell 2016 végén búcsúzott, de öröksége máig meghatározó a Le Mans-i történelemben.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
