--- a/WECw/BMW.html
+++ b/WECw/BMW.html
@@ -7,7 +7,10 @@
     <title>BMW</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">BMW M Hybrid V8</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,23 +28,21 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A BMW M Hybrid V8 a német gyártó legújabb generációs Hypercar versenyautója, amely a FIA World Endurance Championship (WEC) 2024-es szezonjában debütált, és 2025-ben teljes gyári programmal folytatja szereplését. A modell az LMDh szabályrendszer szerint készült, és a BMW visszatérését jelenti a Le Mans-i 24 órás verseny csúcskategóriájába.
+  <section class="info-section"><p>A BMW M Hybrid V8 a német gyártó legújabb generációs Hypercar versenyautója, amely a FIA World Endurance Championship (WEC) 2024-es szezonjában debütált, és 2025-ben teljes gyári programmal folytatja szereplését. A modell az LMDh szabályrendszer szerint készült, és a BMW visszatérését jelenti a Le Mans-i 24 órás verseny csúcskategóriájába.</p>
 
 Műszaki adatok
-- Kategória: Hypercar (LMDh)
-- Motor: 4.0 literes V8 biturbó (BMW P66/3)
-- Hibrid rendszer: Bosch elektromotor + Williams Advanced Engineering akkumulátor
-- Teljesítmény: kb. 670 lóerő (szabályozott)
-- Sebességváltó: Xtrac szekvenciális
-- Alváz: Dallara LMP2 alapú karbonszálas monocoque
-- Hajtás: Hátsókerék-meghajtás, hibrid rásegítéssel
-- Karosszéria: BMW M Motorsport által tervezett aerodinamikai csomag, LED-es világítás, zárt cockpit
+<ul>
+  <li> Kategória: Hypercar (LMDh)</li>
+  <li> Motor: 4.0 literes V8 biturbó (BMW P66/3)</li>
+  <li> Hibrid rendszer: Bosch elektromotor + Williams Advanced Engineering akkumulátor</li>
+  <li> Teljesítmény: kb. 670 lóerő (szabályozott)</li>
+  <li> Sebességváltó: Xtrac szekvenciális</li>
+  <li> Alváz: Dallara LMP2 alapú karbonszálas monocoque</li>
+  <li> Hajtás: Hátsókerék-meghajtás, hibrid rásegítéssel</li>
+  <li> Karosszéria: BMW M Motorsport által tervezett aerodinamikai csomag, LED-es világítás, zárt cockpit</li>
+</ul>
 
-Pilótafelállás 2025-ben
+<p>Pilótafelállás 2025-ben</p>
 #15 BMW M Hybrid V8
 - Dries Vanthoor
 - Raffaele Marciello
@@ -51,11 +52,19 @@ Pilótafelállás 2025-ben
 - René Rast
 - Robin Frijns
 
-Eredmények a 2025-ös szezonban (eddig)
+<p>Eredmények a 2025-ös szezonban (eddig)</p>
 - Katar: mindkét autó célba ért, top 10-ben
 - Imola: technikai hiba miatt kiesés a #20-as autóval
 - Spa-Francorchamps: #15 5. helyezés
 
-Összegzés
+<p>Összegzés</p>
 A BMW M Hybrid V8 a bajor gyártó visszatérését jelenti a hosszútávú versenyzés élvonalába. A modell technikai fejlettsége, a Dallara alváz és a BMW saját fejlesztésű V8-as motorja révén versenyképes alapot biztosít a gyári csapatnak. A 2025-ös szezonban a BMW célja, hogy stabil dobogós szereplővé váljon, és hosszú távon újra Le Mans-győzelemért harcoljon.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
+ 
