--- a/WECw/Ferrari.html
+++ b/WECw/Ferrari.html
@@ -7,7 +7,10 @@
     <title>FERRARI</title>
 </head>
 <body>
-
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">Ferrari 499P</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,23 +28,21 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Ferrari 499P a legendás olasz gyártó visszatérését jelenti a hosszútávú versenyzés csúcskategóriájába, a Hypercar osztályba. A modell 2023-ban debütált a FIA World Endurance Championship (WEC) sorozatban, és már az első évben győzelmet aratott a Le Mans-i 24 órás versenyen. A 499P a Ferrari első gyári prototípusa az 1973-as 312PB óta.
+  <section class="info-section"><p>A Ferrari 499P a legendás olasz gyártó visszatérését jelenti a hosszútávú versenyzés csúcskategóriájába, a Hypercar osztályba. A modell 2023-ban debütált a FIA World Endurance Championship (WEC) sorozatban, és már az első évben győzelmet aratott a Le Mans-i 24 órás versenyen. A 499P a Ferrari első gyári prototípusa az 1973-as 312PB óta.</p>
 
 Műszaki adatok
-- Kategória: Hypercar (LMH szabályrendszer)
-- Motor: 3.0 literes V6 turbó (Ferrari fejlesztés, 120° hengerszög)
-- Hibrid rendszer: 200 kW-os elektromotor az első tengelyen, szabályozott aktiválással
-- Teljesítmény: kb. 680 lóerő (szabályozott)
-- Sebességváltó: 7 sebességes szekvenciális
-- Alváz: Karbonszálas monocoque, teljesen Ferrari fejlesztés
-- Hajtás: eAWD – hátsókerék-meghajtás belső égésű motorral, elsőkerék-meghajtás elektromosan
-- Karosszéria: aerodinamikailag optimalizált, LED-es világítással, zárt cockpit
+<ul>
+  <li> Kategória: Hypercar (LMH szabályrendszer)</li>
+  <li>Motor: 3.0 literes V6 turbó (Ferrari fejlesztés, 120° hengerszög)</li>
+  <li> Hibrid rendszer: 200 kW-os elektromotor az első tengelyen, szabályozott aktiválással</li>
+  <li> Teljesítmény: kb. 680 lóerő (szabályozott)</li>
+  <li> Sebességváltó: 7 sebességes szekvenciális</li>
+  <li> Alváz: Karbonszálas monocoque, teljesen Ferrari fejlesztés</li>
+  <li> Hajtás: eAWD – hátsókerék-meghajtás belső égésű motorral, elsőkerék-meghajtás elektromosan</li>
+  <li> Karosszéria: aerodinamikailag optimalizált, LED-es világítással, zárt cockpit</li>
+</ul>
 
-Pilótafelállás 2025-ben
+<p>Pilótafelállás 2025-ben</p>
 #50 Ferrari 499P
 - Antonio Fuoco
 - Miguel Molina
@@ -52,12 +53,19 @@ Pilótafelállás 2025-ben
 - Antonio Giovinazzi
 Tartalék pilóta: Davide Rigon
 
-Eredmények a 2024-es szezonban
+<p>Eredmények a 2024-es szezonban</p>
 - Le Mans 24h: 2. hely (#50), technikai hiba miatt kiesés (#51)
 - Spa-Francorchamps: győzelem (#51)
 - Imola: dobogó mindkét autóval
 - Fuji: 3. hely (#50)
 
-Összegzés
+<p>Összegzés</p>
 A Ferrari 499P a márka technikai újraértelmezése a hosszútávú versenyzés világában. A modell nemcsak a Ferrari mérnöki tudását képviseli, hanem a márka történelmi örökségét is új szintre emeli. A 2023-as Le Mans-győzelem után a 499P továbbra is az egyik legversenyképesebb Hypercar a mezőnyben, és a Ferrari célja, hogy 2025-ben újra a dobogó legfelső fokára álljon.
- -->
+
+</section>
+
+
+</body>
+</html>
+
+
