--- a/WECw/Mazda.html
+++ b/WECw/Mazda.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<div class="side-buttons">
+    <button class="square-btn">Engine Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+
   <h1 class="nev">Mazda 787B Group C Prototype</h1>
 
     <!-- 3D forgó képváltó -->
@@ -25,35 +30,40 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Mazda 787B a japán Mazda gyár által fejlesztett Group C kategóriás hosszútávú versenyautó, amely 1990–1991 között versenyzett nemzetközi szinten. A modell a 767B utódja, és a 787-es alapjaira épülő, továbbfejlesztett változat. A 787B különlegessége, hogy egy négyrotoros Wankel-motor hajtja, amely rendkívül magas fordulatszámon működik, és jellegzetes hangjáról is ismert.
+  <section class="info-section"><p>A Mazda 787B a japán Mazda gyár által fejlesztett Group C kategóriás hosszútávú versenyautó, amely 1990–1991 között versenyzett nemzetközi szinten. A modell a 767B utódja, és a 787-es alapjaira épülő, továbbfejlesztett változat. A 787B különlegessége, hogy egy négyrotoros Wankel-motor hajtja, amely rendkívül magas fordulatszámon működik, és jellegzetes hangjáról is ismert.</p>
 
 Műszaki adatok
-- Kategória: Group C / IMSA GTP
-- Motor: Mazda R26B – 2.6 literes, 4-rotoros, szívó Wankel-motor
-- Teljesítmény: kb. 700 lóerő @ 9000 rpm
-- Sebességváltó: 5 sebességes manuális (Mazda/Porsche)
-- Hajtás: Hátsókerék-meghajtás
-- Karosszéria: Szénszálas és kevlár kompozit monocoque
-- Felfüggesztés: Elöl és hátul dupla keresztlengőkar, belső rugóstagokkal
-- Tömeg: kb. 830 kg
-- Gumik: Dunlop versenygumik
+<ul>
+  <li> Kategória: Group C / IMSA GTP</li>
+  <li> Motor: Mazda R26B – 2.6 literes, 4-rotoros, szívó Wankel-motor</li>
+  <li> Teljesítmény: kb. 700 lóerő @ 9000 rpm</li>
+  <li>Sebességváltó: 5 sebességes manuális (Mazda/Porsche)</li>
+  <li> Hajtás: Hátsókerék-meghajtás</li>
+  <li> Karosszéria: Szénszálas és kevlár kompozit monocoque</li>
+  <li> Felfüggesztés: Elöl és hátul dupla keresztlengőkar, belső rugóstagokkal</li>
+  <li> Tömeg: kb. 830 kg</li>
+  <li> Gumik: Dunlop versenygumik</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - Le Mans 24h – 1991: 1. hely (362 kör, ~4923 km)
 - Pilóták: Johnny Herbert, Bertrand Gachot, Volker Weidler
 - Csapat: Mazdaspeed
 - Rajtszám: #55
 - Eredmény: Az első japán győzelem Le Mans-ban, és az egyetlen Wankel-motoros győzelem a verseny történetében
 
-Eredmények és örökség
+<p>Eredmények és örökség</p>
 - A 787B 1991-es győzelme után a Wankel-motorokat betiltották a Le Mans-i szabályrendszerben, így a Mazda rekordja máig megismételhetetlen.
 - Az autó ikonikus narancs-zöld „Renown” festése a motorsport egyik legismertebb dizájnjává vált.
 - A 787B-t 2011-ben újra pályára vitték Le Mans-ban, demonstrációs körökön, ahol ismét lenyűgözte a közönséget hangjával és megjelenésével.
 
-Összegzés
+<p>Összegzés</p>
 A Mazda 787B nemcsak technikai bravúr, hanem kulturális ikon is. A Wankel-motoros győzelem a világ egyik legkeményebb versenyén örökre beírta a Mazda nevét a motorsport történetébe. A 787B a japán mérnöki kreativitás és kitartás szimbóluma, amely máig inspirálja a versenyautó-rajongókat világszerte.
- -->
+
+</section>
+  
+</body>
+</html>
+
+
+ 
