--- a/WRCw/Citroen.html
+++ b/WRCw/Citroen.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+
   <h1 class="nev">CITROËN C3 WRC</h1>
 
   <!-- 3D forgó képváltó -->
@@ -26,31 +31,36 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-<!-- A Citroën C3 WRC a Citroën Racing által fejlesztett World Rally Car, amelyet a 2017-es szezonban mutattak be a FIA új szabályrendszerének megfelelően. Az autó a korábbi DS3 WRC utódja, és a márka visszatérését jelentette a rali világbajnokság élvonalába, ahol korábban olyan legendás modellekkel versenyeztek, mint a Xsara WRC és a C4 WRC.
+  <section class="info-section"><p>A Citroën C3 WRC a Citroën Racing által fejlesztett World Rally Car, amelyet a 2017-es szezonban mutattak be a FIA új szabályrendszerének megfelelően. Az autó a korábbi DS3 WRC utódja, és a márka visszatérését jelentette a rali világbajnokság élvonalába, ahol korábban olyan legendás modellekkel versenyeztek, mint a Xsara WRC és a C4 WRC.</p>
 Technikai adatok
 
-- Motor: 1.6 literes, négyhengeres turbófeltöltéses, közvetlen befecskendezésű Citroën Racing GRE 2017
-- Teljesítmény: kb. 380 lóerő @ 6000 rpm
-- Nyomaték: 400 Nm @ 4500 rpm
-- Hajtás: Összkerékhajtás, mechanikus első és hátsó önzáró differenciálmű, hidraulikusan vezérelt középső diffi
-- Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel
-- Felfüggesztés: Állítható MacPherson rendszer, versenypályához optimalizálva
-- Fékek: Szellőztetett tárcsák, 370 mm (aszfalt), 300 mm (murva), vízhűtéses első fékek
-- Tömeg: 1190 kg (versenyzők nélkül), 1350 kg versenyzőkkel együtt
-- Karosszéria: Erősített acél és kompozit elemek, többpontos bukócsővel
+<ul>
+  <li> Motor: 1.6 literes, négyhengeres turbófeltöltéses, közvetlen befecskendezésű Citroën Racing GRE 2017</li>
+  <li> Teljesítmény: kb. 380 lóerő @ 6000 rpm</li>
+  <li> Nyomaték: 400 Nm @ 4500 rpm</li>
+  <li> Hajtás: Összkerékhajtás, mechanikus első és hátsó önzáró differenciálmű, hidraulikusan vezérelt középső diffi</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel</li>
+  <li> Felfüggesztés: Állítható MacPherson rendszer, versenypályához optimalizálva</li>
+  <li> Fékek: Szellőztetett tárcsák, 370 mm (aszfalt), 300 mm (murva), vízhűtéses első fékek</li>
+  <li> Tömeg: 1190 kg (versenyzők nélkül), 1350 kg versenyzőkkel együtt</li>
+  <li> Karosszéria: Erősített acél és kompozit elemek, többpontos bukócsővel</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 A C3 WRC 2017 és 2020 között szerepelt a WRC-ben, a Citroën Total Abu Dhabi WRT színeiben. A csapat pilótái között szerepelt Kris Meeke, Craig Breen, Stéphane Lefebvre, Sheikh Khalid Al Qassimi, valamint később Sébastien Ogier is. Bár az autó nem vált dominánssá, több futamgyőzelmet is szerzett, és technikai szempontból jelentős fejlesztéseket hozott a Citroën számára.
 
-Érdekességek
+<p>Érdekességek</p>
 - A C3 WRC volt az első Citroën, amelyet teljes egészében a 2017-es szabályrendszer szerint terveztek, így szélesebb karosszériával, nagyobb aerodinamikai elemekkel és erősebb motorral rendelkezett.
 - A modell bemutatása Abu Dhabiban történt, a Citroën Racing és az Abu Dhabi szponzorációs együttműködésének részeként.
 - A C3 WRC fejlesztése során a Citroën több évnyi tapasztalatot hasznosított, amelyet a WTCC és a korábbi WRC programok során szerzett.
 
-Összegzés
-A Citroën C3 WRC egy technikailag fejlett, látványos és versenyképes raliautó volt, amely a márka hagyományait folytatta a világbajnokságban. Bár nem hozott világbajnoki címet, fontos lépés volt a Citroën motorsport stratégiájában, és hozzájárult a WRC technikai fejlődéséhez. -->
+<p>Összegzés</p>
+A Citroën C3 WRC egy technikailag fejlett, látványos és versenyképes raliautó volt, amely a márka hagyományait folytatta a világbajnokságban. Bár nem hozott világbajnoki címet, fontos lépés volt a Citroën motorsport stratégiájában, és hozzájárult a WRC technikai fejlődéséhez.
+
+</section>
 
 
+</body>
+</html>
+
+ 
