--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+
   <h1 class="nev">FORD Puma WRC</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,30 +32,36 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Ford Puma Rally1 a Ford és az M-Sport közös fejlesztésű raliautója, amelyet a 2022-es szezonban mutattak be a WRC új, hibrid alapú szabályrendszerének megfelelően. Az autó a korábbi Ford Fiesta WRC utódja, és a Ford elkötelezettségét jelzi az elektromos hajtásláncok és a fenntartható motorsport iránt.
+  <section class="info-section"><p>A Ford Puma Rally1 a Ford és az M-Sport közös fejlesztésű raliautója, amelyet a 2022-es szezonban mutattak be a WRC új, hibrid alapú szabályrendszerének megfelelően. Az autó a korábbi Ford Fiesta WRC utódja, és a Ford elkötelezettségét jelzi az elektromos hajtásláncok és a fenntartható motorsport iránt.</p>
 
 Technikai adatok
-- Motor: 1.6 literes Ford EcoBoost turbómotor, közvetlen befecskendezéssel
-- Hibrid rendszer: 100 kW-os elektromotor + 3.9 kWh plug-in akkumulátor
-- Teljesítmény: kb. 386 lóerő + 134 lóerő elektromos rásegítés
-- Hajtás: Összkerékhajtás, mechanikus első és hátsó önzáró differenciálmű
-- Sebességváltó: 5 sebességes félautomata
-- Karosszéria: Tubular spaceframe váz, FIA többpontos bukócsővel
-- Tömeg: 1260 kg (szabály szerint)
-- Fékek: 300–370 mm-es tárcsák, négydugattyús féknyergekkel
-- Gumik: Pirelli (2022–2024), Hankook (2025-től)
+<ul>
+  <li> Motor: 1.6 literes Ford EcoBoost turbómotor, közvetlen befecskendezéssel</li>
+  <li> Hibrid rendszer: 100 kW-os elektromotor + 3.9 kWh plug-in akkumulátor</li>
+  <li> Teljesítmény: kb. 386 lóerő + 134 lóerő elektromos rásegítés</li>
+  <li> Hajtás: Összkerékhajtás, mechanikus első és hátsó önzáró differenciálmű</li>
+  <li> Sebességváltó: 5 sebességes félautomata</li>
+  <li> Karosszéria: Tubular spaceframe váz, FIA többpontos bukócsővel</li>
+  <li> Tömeg: 1260 kg (szabály szerint)</li>
+  <li> Fékek: 300–370 mm-es tárcsák, négydugattyús féknyergekkel</li>
+  <li> Gumik: Pirelli (2022–2024), Hankook (2025-től)</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 A Puma Rally1 2022-ben debütált a Monte-Carlo Rallyn, és azóta is az M-Sport Ford World Rally Team versenygépe. A pilóták között szerepelt Craig Breen, Gus Greensmith, Adrien Fourmaux, Ott Tänak és Grégoire Munster. Az autó több dobogós helyezést és futamgyőzelmet szerzett, különösen Tänak vezetésével.
 
-Érdekességek
+<p>Érdekességek</p>
 - A Puma Rally1 volt az első Ford, amelyet teljes egészében a Rally1 hibrid szabályrendszer szerint fejlesztettek.
 - A hibrid rendszer lehetővé teszi, hogy az autó zéró emisszióval közlekedjen városi szakaszokon, miközben versenytempóban is extra teljesítményt biztosít.
 - A 2024-es és 2025-ös szezonban új aerodinamikai elemeket kapott, köztük módosított hátsó szárnyat és hatékonyabb diffúzort.
 
-Összegzés
-A Ford Puma Rally1 egy modern, hibrid hajtású raliautó, amely a Ford motorsport innovációját képviseli a WRC-ben. A modell technikai fejlettsége és látványos megjelenése révén méltó utódja a Fiesta WRC-nek, és fontos szerepet játszik a fenntartható versenyzés jövőjében. -->
+<p>Összegzés</p>
+A Ford Puma Rally1 egy modern, hibrid hajtású raliautó, amely a Ford motorsport innovációját képviseli a WRC-ben. A modell technikai fejlettsége és látványos megjelenése révén méltó utódja a Fiesta WRC-nek, és fontos szerepet játszik a fenntartható versenyzés jövőjében. 
+</section>
+
+
+</body>
+</html>
+
+
+ 
