--- a/WRCw/Ford.html
+++ b/WRCw/Ford.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
   <h1 class="nev">FORD Fiesta WRC</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,31 +30,37 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Ford Fiesta WRC a Ford és az M-Sport közös fejlesztésű versenyautója, amelyet a 2017-es WRC szabályrendszer szerint építettek. Az autó a korábbi Fiesta RS WRC utódja, és a Ford visszatérését jelentette a világbajnoki címekért folytatott küzdelembe. A modell technikailag fejlett, látványos és versenyképes gép volt, amely több futamgyőzelmet és világbajnoki címet is szerzett.
+  <section class="info-section"><p>A Ford Fiesta WRC a Ford és az M-Sport közös fejlesztésű versenyautója, amelyet a 2017-es WRC szabályrendszer szerint építettek. Az autó a korábbi Fiesta RS WRC utódja, és a Ford visszatérését jelentette a világbajnoki címekért folytatott küzdelembe. A modell technikailag fejlett, látványos és versenyképes gép volt, amely több futamgyőzelmet és világbajnoki címet is szerzett.</p>
 
 Technikai adatok
-- Motor: 1.6 literes Ford EcoBoost turbómotor, soros négyhengeres, 16 szelepes
-- Teljesítmény: kb. 380 lóerő
-- Nyomaték: 450 Nm
-- Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel
-- Hajtás: Összkerékhajtás, aktív középső differenciálművel
-- Karosszéria: Acél alapú, kompozit elemekkel megerősített, bukócsővel
-- Tömeg: 1190 kg (versenyzők nélkül), 1350 kg versenyzőkkel együtt
-- Fékek: Szellőztetett tárcsák, 370 mm (aszfalt), 300 mm (murva)
-- Gumik: Michelin (2017–2020), Pirelli (2021)
+<ul>
+  <li>Motor: 1.6 literes Ford EcoBoost turbómotor, soros négyhengeres, 16 szelepes</li>
+  <li> Teljesítmény: kb. 380 lóerő</li>
+  <li> Nyomaték: 450 Nm</li>
+  <li> Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel</li>
+  <li> Hajtás: Összkerékhajtás, aktív középső differenciálművel</li>
+  <li> Karosszéria: Acél alapú, kompozit elemekkel megerősített, bukócsővel</li>
+  <li> Tömeg: 1190 kg (versenyzők nélkül), 1350 kg versenyzőkkel együtt</li>
+  <li> Fékek: Szellőztetett tárcsák, 370 mm (aszfalt), 300 mm (murva)</li>
+  <li> Gumik: Michelin (2017–2020), Pirelli (2021)</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 A Fiesta WRC 2017-ben debütált a Monte-Carlo Rallyn, és rögtön győzelemmel indított. A pilóták között szerepelt Sébastien Ogier, Ott Tänak, Elfyn Evans, Teemu Suninen, Gus Greensmith és Adrien Fourmaux. Az autó 2017-ben egyéni és konstruktőri világbajnoki címet szerzett Ogier és az M-Sport révén.
 
-Érdekességek
+<p>Érdekességek</p>
 - A Fiesta WRC volt az utolsó nem gyári csapat által fejlesztett autó, amely világbajnoki címet nyert.
 - Az M-Sport 71 példányt épített, ebből 38-at a gyári csapatnak, és több mint 475 futamgyőzelmet szerzett különböző bajnokságokban.
 - A modell 2021-ben búcsúzott a WRC-től, helyét a hibrid hajtású Ford Puma Rally1 vette át.
 
-Összegzés
+<p>Összegzés</p>
 A Ford Fiesta WRC egy ikonikus raliautó, amely a modern WRC korszak egyik meghatározó szereplője volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a Ford motorsport történetében.
- -->
+ 
+</section>
+
+
+</body>
+</html>
+
+
+ 
