--- a/WRCw/Peugeot.html
+++ b/WRCw/Peugeot.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+<div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+
   <h1 class="nev">PEUGEOT 206 WRC</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,38 +31,43 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Peugeot 206 WRC a francia Peugeot Sport által fejlesztett World Rally Car, amely 1999 és 2003 között versenyzett a FIA World Rally Championship (WRC) csúcskategóriájában. A modell a Peugeot visszatérését jelentette a rali világbajnokság élvonalába, és három konstruktőri, valamint két egyéni világbajnoki címet szerzett, ezzel a korszak egyik legsikeresebb raliautójává vált.
+  <section class="info-section"><p>A Peugeot 206 WRC a francia Peugeot Sport által fejlesztett World Rally Car, amely 1999 és 2003 között versenyzett a FIA World Rally Championship (WRC) csúcskategóriájában. A modell a Peugeot visszatérését jelentette a rali világbajnokság élvonalába, és három konstruktőri, valamint két egyéni világbajnoki címet szerzett, ezzel a korszak egyik legsikeresebb raliautójává vált.</p>
 
 Technikai adatok
-- Motor: 2.0 literes, soros négyhengeres, 16 szelepes turbómotor
-- Teljesítmény: kb. 300 lóerő
-- Nyomaték: ~500 Nm
-- Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel
-- Hajtás: Összkerékhajtás, aktív differenciálművekkel
-- Karosszéria: Szélesített 206-os alap, kompozit elemekkel és bukócsővel
-- Tömeg: kb. 1230 kg
-- Fékek: Szellőztetett tárcsák, 4 dugattyús féknyergek
-- Gumik: Michelin
+<ul>
+  <li> Motor: 2.0 literes, soros négyhengeres, 16 szelepes turbómotor</li>
+  <li> Teljesítmény: kb. 300 lóerő</li>
+  <li> Nyomaték: ~500 Nm</li>
+  <li>Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel</li>
+  <li> Hajtás: Összkerékhajtás, aktív differenciálművekkel</li>
+  <li>Karosszéria: Szélesített 206-os alap, kompozit elemekkel és bukócsővel</li>
+  <li> Tömeg: kb. 1230 kg</li>
+  <li> Fékek: Szellőztetett tárcsák, 4 dugattyús féknyergek</li>
+  <li> Gumik: Michelin</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 A 206 WRC 1999-ben debütált a Tour de Corse futamon, és már a következő évben futamgyőzelmeket szerzett. A Peugeot három egymást követő évben (2000, 2001, 2002) megnyerte a konstruktőri világbajnokságot, miközben Marcus Grönholm 2000-ben és 2002-ben az egyéni világbajnoki címet is elhódította. A modell utolsó győzelmét 2003-ban szerezte a Rally Catalunyán.
 
-Pilóták
+<p>Pilóták</p>
 - Marcus Grönholm – kétszeres világbajnok a 206 WRC-vel
 - Gilles Panizzi – aszfalt-specialista, több győzelemmel
 - Didier Auriol, Harri Rovanperä, Richard Burns – gyári és vendégpilóták
 
-Érdekességek
+<p>Érdekességek</p>
 - A Peugeot 206 WRC homologizációjához a Peugeot kénytelen volt egy hosszabbított lökhárítós „206 Grand Tourisme” utcai változatot gyártani, mivel az alapmodell nem érte el a minimális hosszúságot.
 - A 206 WRC különösen erős volt aszfaltos és murvás pályákon, és a kor technikai csúcsát képviselte.
 - A klasszikus kék-ezüst festés, oroszlán motívummal, mára a rali történetének egyik legismertebb dizájnjává vált.
 
-Összegzés
-A Peugeot 206 WRC a 2000-es évek elejének egyik legsikeresebb és legikonikusabb raliautója volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a Peugeot motorsport történetében, és máig emlékezetes maradt a rali rajongók számára.
+<p>Összegzés</p>
+A Peugeot 206 WRC a 2000-es évek elejének egyik legsikeresebb és legikonikusabb raliautója volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a Peugeot motorsport történetében, és máig emlékezetes maradt a rali rajongók számára.</section>
 
 
- -->
+</body>
+</html>
+
+
+ 
+
+
+ 
