--- a/WRCw/Skoda.html
+++ b/WRCw/Skoda.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+  <div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+
   <h1 class="nev">ŠKODA Fabia RS WRC</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,31 +31,37 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Škoda Fabia RS Rally2 a cseh gyártó legfrissebb fejlesztésű Rally2-es versenyautója, amelyet 2022-ben mutattak be, és 2023-tól aktívan versenyez a FIA World Rally Championship WRC2 kategóriájában. Az autó a rendkívül sikeres Fabia R5 és Rally2 evo modellek utódja, és a Škoda Motorsport több mint egy évtizedes tapasztalatát sűríti egy új platformba.
+  <section class="info-section"><p>A Škoda Fabia RS Rally2 a cseh gyártó legfrissebb fejlesztésű Rally2-es versenyautója, amelyet 2022-ben mutattak be, és 2023-tól aktívan versenyez a FIA World Rally Championship WRC2 kategóriájában. Az autó a rendkívül sikeres Fabia R5 és Rally2 evo modellek utódja, és a Škoda Motorsport több mint egy évtizedes tapasztalatát sűríti egy új platformba.</p>
 
 Technikai adatok
-- Motor: 1.6 literes turbófeltöltéses, soros négyhengeres
-- Teljesítmény: kb. 289 lóerő @ 6250 rpm
-- Nyomaték: 430 Nm @ 4750 rpm
-- Sebességváltó: 5 sebességes szekvenciális versenyváltó
-- Hajtás: Összkerékhajtás, mechanikus differenciálművekkel
-- Karosszéria: Szélesített Fabia alap, bukócsővel és kompozit elemekkel
-- Tömeg: 1230 kg (FIA szabály szerint)
-- Fékek: 300–355 mm-es tárcsák, négydugattyús féknyergek
-- Gumik: Michelin (2023), Hankook (2025-től)
+<ul>
+  <li> Motor: 1.6 literes turbófeltöltéses, soros négyhengeres</li>
+  <li> Teljesítmény: kb. 289 lóerő @ 6250 rpm</li>
+  <li> Nyomaték: 430 Nm @ 4750 rpm</li>
+  <li> Sebességváltó: 5 sebességes szekvenciális versenyváltó</li>
+  <li> Hajtás: Összkerékhajtás, mechanikus differenciálművekkel</li>
+  <li> Karosszéria: Szélesített Fabia alap, bukócsővel és kompozit elemekkel</li>
+  <li> Tömeg: 1230 kg (FIA szabály szerint)</li>
+  <li> Fékek: 300–355 mm-es tárcsák, négydugattyús féknyergek</li>
+  <li> Gumik: Michelin (2023), Hankook (2025-től)</li>
+</ul>
 
-Versenytörténet
+<p>Versenytörténet</p>
 A Fabia RS Rally2 2023-ban több nemzetközi sorozatban is versenyzett, köztük a WRC2-ben, az ERC-ben (Európa-bajnokság), valamint nemzeti bajnokságokban. Az autó már az első szezonban dobogós helyezéseket és futamgyőzelmeket szerzett, például Oliver Solberg és Sami Pajari révén. A Škoda célja, hogy visszaszerezze a WRC2 dominanciáját, amelyet korábban a Fabia R5 és Rally2 evo modellekkel tartott fenn.
 
-Érdekességek
+<p>Érdekességek</p>
 - A Fabia RS Rally2 a negyedik generációs Fabia utcai modellre épül, de teljesen új versenyplatformot kapott.
 - A Škoda Motorsport külön motort fejlesztett az autóhoz, és jelentősen javította a futóművet, elektronikát és biztonsági rendszereket.
 - A modell fejlesztése során a Škoda célja az volt, hogy minden részletet optimalizáljon, és a Rally2 kategória legversenyképesebb autóját hozza létre.
 
-Összegzés
+<p>Összegzés</p>
 A Škoda Fabia RS Rally2 a cseh gyártó legújabb raliautója, amely a WRC2-ben versenyez, és a Rally2 kategória technikai csúcsát képviseli. A modell a Škoda Motorsport hosszú távú sikereinek folytatása, és a jövőben is meghatározó szereplője lehet a nemzetközi rali világának.
- -->
+ 
+</section>
+
+
+</body>
+</html>
+
+
+ 
