--- a/WRCw/Volkswagen.html
+++ b/WRCw/Volkswagen.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+    <!-- Bal oldali gombok -->
+  <div class="side-buttons">
+    <button class="square-btn">Car Start</button>
+    <button class="square-btn">ONBROAD</button>
+  </div>
+
   <h1 class="nev">VOLKSWAGEN Polo GTI R WRC</h1>
 
     <!-- 3D forgó képváltó -->
@@ -26,24 +32,23 @@
   </div>
 
   <script src="../valtas.js"></script>
-</body>
-</html>
-
-
-<!-- A Volkswagen Polo R WRC a Volkswagen Motorsport által fejlesztett World Rally Car, amely a Polo utcai modellre épülő, de teljesen versenycélra tervezett konstrukció. Az autó 2013-ban debütált a Monte-Carlo Rallyn, és azonnal győzelmeket aratott. A Polo R WRC a Volkswagen első WRC-projektje volt, és a márka rögtön a sportág élvonalába került.
+  <section class="info-section"><p>A Volkswagen Polo R WRC a Volkswagen Motorsport által fejlesztett World Rally Car, amely a Polo utcai modellre épülő, de teljesen versenycélra tervezett konstrukció. Az autó 2013-ban debütált a Monte-Carlo Rallyn, és azonnal győzelmeket aratott. A Polo R WRC a Volkswagen első WRC-projektje volt, és a márka rögtön a sportág élvonalába került.</p>
 
 Technikai adatok
-- Motor: 1.6 literes, soros négyhengeres TSI turbómotor
-- Teljesítmény: 315 lóerő @ 6250 rpm
-- Nyomaték: 425 Nm @ 5000 rpm
-- Sebességváltó: 6 sebességes szekvenciális kézi váltó (Xtrac)
-- Hajtás: Állandó összkerékhajtás, lamellás önzáró első és hátsó differenciálmű
-- Karosszéria: Szélesített Polo alap, bukócsővel és kompozit elemekkel
-- Tömeg: 1200 kg (FIA szabály szerint)
-- Felfüggesztés: McPherson rendszer, ZF állítható lengéscsillapítók
-- Gumik: Michelin
+<u>
+  
+    <li> Motor: 1.6 literes, soros négyhengeres TSI turbómotor</li>
+    <li> Teljesítmény: 315 lóerő @ 6250 rpm</li>
+    <li> Nyomaték: 425 Nm @ 5000 rpm</li>
+    <li> Sebességváltó: 6 sebességes szekvenciális kézi váltó (Xtrac)</li>
+    <li> Hajtás: Állandó összkerékhajtás, lamellás önzáró első és hátsó differenciálmű</li>
+    <li> Karosszéria: Szélesített Polo alap, bukócsővel és kompozit elemekkel</li>
+    <li> Tömeg: 1200 kg (FIA szabály szerint)</li>
+    <li> Felfüggesztés: McPherson rendszer, ZF állítható lengéscsillapítók</li>
+    <li> Gumik: Michelin</li>
+</u>
 
-Versenytörténet
+<p>Versenytörténet</p>
 - Debütálás: 2013 Monte-Carlo Rally
 - Futamok száma: 52
 - Győzelmek: 43
@@ -52,16 +57,22 @@ Versenytörténet
 - Egyéni: Sébastien Ogier – 2013, 2014, 2015, 2016
 - Konstruktőri: Volkswagen Motorsport – 2013–2016
 
-Pilóták
+<p>Pilóták</p>
 - Sébastien Ogier – négyszeres világbajnok a Polo R WRC-vel
 - Jari-Matti Latvala – többszörös futamgyőztes
 - Andreas Mikkelsen – stabil dobogós versenyző
 
-Érdekességek
+<p>Érdekességek</p>
 - A Polo R WRC a Super 2000 szabályrendszer alapján indult fejlesztésnek, de végül teljesen új platformot kapott.
 - Az autó fejlesztése 2011-ben kezdődött, és a Volkswagen Dakar-ralin szerzett tapasztalatait is felhasználták.
 - A Polo R WRC dominanciája miatt a WRC szabályalkotói később módosították a technikai előírásokat, hogy kiegyensúlyozottabb mezőnyt teremtsenek.
 
-Összegzés
+<p>Összegzés</p>
 A Volkswagen Polo R WRC a modern rali egyik legsikeresebb és legmeghatározóbb autója volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a motorsport történetében, és a Volkswagen Motorsport aranykorát jelképezi.
- -->
+ </section>
+
+
+</body>
+</html>
+
+
