--- a/WRCw/Volkswagen.html
+++ b/WRCw/Volkswagen.html
@@ -9,15 +9,14 @@
 </head>
 <body>
 
-    <!-- Bal oldali gombok -->
   <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../WRC/Start/Volkswagen.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../WRC/ONBOARD/Volkswagen.mp3">ONBOARD</button>
+</div>
 
   <h1 class="nev">VOLKSWAGEN Polo GTI R WRC</h1>
 
-    <!-- 3D forgó képváltó -->
+    
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
