--- a/WRCw/Peugeot.html
+++ b/WRCw/Peugeot.html
@@ -10,13 +10,13 @@
 <body>
 
 <div class="side-buttons">
-    <button class="square-btn">Car Start</button>
-    <button class="square-btn">ONBROAD</button>
-  </div>
+  <button class="square-btn" data-sound="../WRC/Start/Peugeot.mp3">Car Start</button>
+  <button class="square-btn" data-sound="../WRC/ONBOARD/Peugeot.mp3">ONBOARD</button>
+</div>
 
   <h1 class="nev">PEUGEOT 206 WRC</h1>
 
-    <!-- 3D forgó képváltó -->
+   
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
